add dynamic file read

--- a/loadDataGridFromCSV.html
+++ b/loadDataGridFromCSV.html
@@ -7,8 +7,8 @@
     <script src="perspective.js"></script>
 </head>
 <body>
-
-<div id="myGrid" style="width: 100%; height: 100%;" class="ag-theme-balham"></div>
+    <input type="file" id="input">
+    <div id="myGrid" style="width: 100%; height: 100%;" class="ag-theme-dark"></div>
 
     <script src="loadDataGridFromCSV.js"></script>
 </body>
